<resources>
    <string name="app_name">RecipeApp</string>
    <string name="categories">Категории</string>
    <string name="favorites">Избранное</string>
    <string name="no_favorites">Вы еще не добавили ни одного рецепта в избранное</string>
    <string name="category_icon_description">Обложка категории</string>
    <string name="header_image_description">Фоновое изображение с продуктами питания</string>
    <string name="recipe_image">Изображение рецепта</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="list_of_recipes">Список рецептов</string>
    <string name="cooking_method">Способ приготовления</string>
    <string name="portions">Порции:</string>
    <string name="add_to_favorites">Добавить в избранное</string>
</resources>
