<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/alabaster"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivFavoritesImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:contentDescription="@string/category_icon_description"
            android:scaleType="centerCrop"
            tools:src="@drawable/bcg_favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFavoritesTitle"
            style="@style/CategoryNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginBottom="@dimen/margin_main"
            android:background="@drawable/shape_header_background"
            android:padding="@dimen/padding_indention"
            tools:text="@string/favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_half" />

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/no_favorites"
        android:gravity="center"
        android:textSize="@dimen/text_size_header"
        android:textColor="@color/gray"
        android:visibility="gone" />

</LinearLayout>
