<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvRecipeName"
                style="@style/CategoryNameStyle"
                android:layout_width="@dimen/header_width_ingredients"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_main"
                android:layout_marginTop="@dimen/layout_margin_top_ingredients"
                android:background="@drawable/shape_header_background"
                android:paddingStart="@dimen/padding_indention"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/CategoryNameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main"
            android:text="@string/ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            style="@style/IngredientDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main"
            android:nestedScrollingEnabled="false" />

        <TextView
            style="@style/CategoryNameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main"
            android:text="@string/cooking_method" />

        <androidx.recyclerview.widget.RecyclerView
            style="@style/CockingDescription"
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
